<resources>
    <string name="app_name">Test IMPL</string>
    <string name="so_7">7</string>
    <string name="so_8">8</string>
    <string name="so_9">9</string>
    <string name="dau_c">C</string>
    <string name="dau_ac">AC</string>
    <string name="so_4">4</string>
    <string name="so_5">5</string>
    <string name="so_6">6</string>
    <string name="dau_nhan">*</string>
    <string name="dau_bang">=</string>
    <string name="dau_mo_ngoac">)</string>
    <string name="dau_dong_ngoac">(</string>
    <string name="so_0">0</string>
    <string name="dau_tru">-</string>
    <string name="dau_cong">+</string>
    <string name="so_3">3</string>
    <string name="so_2">2</string>
    <string name="so_1">1</string>
    <string name="dau_chia">/</string>
</resources>
